--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+
     - run: npm ci
+
     - run: |
         touch .env
-        echo "${{secret.PROD_ENV_FILE}}" > .env
+        echo "${{ secrets.PROD_ENV_FILE }}" > .env
+      shell: bash
+
